[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/Bandits/Sprites/Heavy Bandit/HeavyBandit.png" type="Texture" id=1]
[ext_resource path="res://scenes/BanditEnemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "hit"
}, {
"args": [  ],
"method": "end_of_hit"
}, {
"args": [  ],
"method": "start_walking_anim"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "on_hit"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 32 ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.5, 15.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8.5, 13.5 )

[sub_resource type="CapsuleShape2D" id=8]
radius = 9.0
height = 22.0

[node name="BanditEnemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 5
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 4 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/attack = SubResource( 6 )
anims/on_hit = SubResource( 7 )
anims/walk = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -20, -17 )
enabled = true

[node name="Detector" type="Area2D" parent="."]
position = Vector2( -42, 7 )
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2( 25.5, -9.5 )
shape = SubResource( 4 )

[node name="AttackDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( -16.5, -2.5 )
shape = SubResource( 5 )

[node name="BanditHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BanditHitbox"]
position = Vector2( -1, 4 )
shape = SubResource( 8 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -6.0

[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="body_entered" from="BanditHitbox" to="." method="_on_BanditHitbox_body_entered"]
